--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
     <div class="container">
     <h1>Todo list</h1>
     <div class="input">
+      <form>
         <input id="task" type="text" placeholder="enter your task">
         <button>Add task</button>
+      </form>
     </div>
     <div class="task">
+      <ul class="list"></ul>
     </div>
   </div>
     <script src="main.js"></script>
